[gd_scene load_steps=8 format=2]

[ext_resource path="res://Hurtbox.gd" type="Script" id=1]
[ext_resource path="res://Sprites/_art_/Environment/GreyBrickWallCrack1Mauve.png" type="Texture" id=2]
[ext_resource path="res://Placeables/DestructibleWall1.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/Hit3.mp3" type="AudioStream" id=4]
[ext_resource path="res://SoundEffects/PhysicalSounds/StoneDoorOpen.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 126.5, 126.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 126.5, 127.5 )

[node name="DestructibleWall" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 2 )

[node name="SolidSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 13.83
pitch_scale = 0.91

[node name="DeathTime" type="Timer" parent="."]

[node name="Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.639
pitch_scale = 0.89

[connection signal="timeout" from="DeathTime" to="." method="_on_DeathTime_timeout"]
